<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/media_route_menu_item"
        android:title="Cast"
        app:actionProviderClass="androidx.mediarouter.app.MediaRouteActionProvider"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_save_subtitle"
        android:title="@string/save_subtitle"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_advanced"
        android:title="@string/advanced"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_realtime_transcode"
                android:title="@string/realtime_transcode"
                android:checkable="true" />
            <item
                android:id="@+id/action_hls_seeking"
                android:title="@string/hls_seeking"
                android:checkable="true" />
            <item
                android:id="@+id/action_reset_receiver_learning"
                android:title="@string/reset_receiver_learning" />
        </menu>
    </item>
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logs"
        android:title="@string/view_logs"
        app:showAsAction="never" />
</menu>
